--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <title>(newraina)101-clickable-grid</title>
     <link rel="stylesheet" href="main.css"/>
-    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <div id="container">
     <div id="selnum">
         <label for="select">请选择方块个数：</label>
-        <select name="select" id="select">
+        <select name="select" id="select" onchange="update(this.value)">
             <option value="1">1</option>
-            <option value="2">2</option>
+            <option value="2" selected="selected">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
             <option value="5">5</option>
@@ -24,14 +23,15 @@
     </div>
     <div class="box">
         <div class="column">
-            <span class="item">11</span>
-            <span class="item">11</span>
+            <span class="item">1</span>
+            <span class="item">2</span>
         </div>
         <div class="column">
-            <span class="item">11</span>
-            <span class="item">11</span>
+            <span class="item">3</span>
+            <span class="item">4</span>
         </div>
     </div>
 </div>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
