改进：变量命名、事件绑定、添加注释

--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -9,7 +9,7 @@
 <div id="container">
     <div id="selnum">
         <label for="select">请选择方块个数：</label>
-        <select name="select" id="select" onchange="update(this.value)">
+        <select name="select" id="select">
             <option value="1">1</option>
             <option value="2" selected="selected">2</option>
             <option value="3">3</option>
