添加功能：当点击每个格子的时候，都用console.log打印出当前格子的数字 其他修复

--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -21,16 +21,7 @@
             <option value="9">9</option>
         </select>
     </div>
-    <div class="box">
-        <div class="column">
-            <span class="item">1</span>
-            <span class="item">2</span>
-        </div>
-        <div class="column">
-            <span class="item">3</span>
-            <span class="item">4</span>
-        </div>
-    </div>
+    <div class="box"></div>
 </div>
 <script type="text/javascript" src="main.js"></script>
 </body>
