--- a/101-clickable-grid/hpeonxf.html
+++ b/101-clickable-grid/hpeonxf.html
@@ -55,7 +55,7 @@ window.onload=function(){
         containBox.addEventListener("click",function(e){
             e=e||window.event;
             var target=e.target||e.srcElement;
-            if(target.className=="box"){
+            if(target.className==="box"){
             console.log(target.innerHTML)
             }
         })
