--- a/102-github-pages/index.html
+++ b/102-github-pages/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="particles-after-filter"></div>
     <div id="particles"></div>
-    <div class="container">
+    <div id="container">
         <div id="title">
             AB<span class="iconfont">&#xe609;</span>UT ME
         </div>
@@ -71,7 +71,7 @@
                         <img src="src/dafeiji.png" height="60" alt="打飞机" class="inner-cell">
                     </div>
                     <p class="caption">打飞机</p>
-                    <p class="hiden-caption">还在制作中哈~</p>
+                    <p class="hiden-caption">还在制作中哈</p>
                 </div>
             </a>
         </div>
