--- a/103-signup-pages/taobao_register.html
+++ b/103-signup-pages/taobao_register.html
@@ -1,1 +1,66 @@
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" Content="text/html; charset=utf-8">
+	<title>账户注册|淘宝</title>
+	<link rel="stylesheet" type="text/css" href="./index.css">
+	<script src="./jquery-1.5.2.min.js"></script>
+	<script type="text/javascript" src="./index.js"></script>
+	
+</head>
+<body>
+	<div class="header_logo">
+		<a href="https://www.taobao.com/?spm=a2145.7268393.0.0.KdVSmL"><img src="./logo.png" ></a>
+		<p>用户注册</p>
+	</div>
+	<div id="header_process">
+		<div id="steps">
+			<ul>
+				<li class="onStep"><span>1</span>  设置用户名</li>
+				<li class="outStep"><span>2</span>  填写账号信息</li>
+				<li class="outStep"><span>3</span>  设置支付方式</li>
+				<li class="outStep"><span>4</span>  注册成功</li>
+			</ul>
+		</div>
+		<div id="languages">
+				<a href="https://reg.taobao.com/member/new_register.jhtml?spm=a2145.7268393.0.0.6zw1zj&_lang=zh-S" >中文</a><span>|</span><a href="https://reg.taobao.com/member/new_register.jhtml?spm=a2145.7268393.0.0.6zw1zj&_lang=en&_regfrom=TB_OVERSEA">english</a>
+		</div>
+	</div>
+	<div id="content">
+		<div class="row">
+			<form>
+				<label>手机号</label>
+				<div id="slide">
+					<div id="slideDown"><span id="span1">中国大陆</span><span id="span2">+86</span></div>
+				</div>	
+				<input type="textarea" value=" 请输入你的手机号">
+			</form>
+		</div>
+		
+		
+		<div id="confirmation" class="row">
+			<p>验证</p>
+			<div id="slider"><div draggable="true" id="div1"><img src="./rt.png"></div>请按住滑块，拖动到右边</div>
+		</div>
+		<div id="nextStep" class="row"><p>下一步</p></div>
+		<p id="emailReg" class="row"><a href="">需要通过邮箱注册</a></p>
+		<div id="selector">
+			<select size="7" multiple="multiple">
+					<option value="国家1    +855">国家1   +855</option>
+					<option value="国家2    +855">国家2   +855</option>
+					<option value="国家3    +855">国家3   +855</option>
+					<option value="国家4    +855">国家4   +855</option>
+					<option value="国家5    +855">国家5   +855</option>
+					<option value="国家6    +855">国家6   +855</option>
+					<option value="国家7    +855">国家7   +855</option>
+					<option value="国家8    +855">国家8   +855</option>
+					<option value="国家9    +855">国家9   +855</option>
+					<option value="国家10   +855">国家10   +855</option>
+					<option value="国家11   +855">国家11   +855</option>
+					<option value="国家12   +855">国家12   +855</option>
+			</select>
+		</div>
+	</div>
+	
+</body>
+</html>
