--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -7,7 +7,7 @@
     <title>103-signup-pages-taobao-newraina</title>
     <meta name="description" content="103-signup-pages">
     <meta name="author" content="newraina">
-    <link rel="stylesheet" href="out/style.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 
 <body>
@@ -139,7 +139,7 @@
     </div>
     <!-- 反馈建议部分-->
     <div class="suggest">
-        <img src="src/T1Pt0FXmJcXXXXXXXX-18-18.png" alt="改进"/>
+        <img src="./dist/images/T1Pt0FXmJcXXXXXXXX-18-18.png" alt="改进"/>
         <a href="#">"淘宝注册"改进建议</a>
     </div>
     <!-- 底部各种链接-->
@@ -179,7 +179,7 @@
         </div>
     </footer>
 </div>
-<script src="http://cdn.staticfile.org/jquery/2.1.1-rc2/jquery.min.js"></script>
-<script src="js/main.js"></script>
+<script src="./dist/js/jquery.min.js"></script>
+<script src="./dist/js/main.min.js"></script>
 </body>
 </html>
