--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="http://localhost:8080/public/style.css">
-	<script type="text/javascript"  src="http://localhost:8080/public/helloWorld.js"></script>
+	<!-- <link rel="stylesheet" href="http://localhost:8080/public/_boostrap.css"> -->
 </head>
 <body class="hello-form">
-	<p>hey, what is your name?</p>	
+	<div class="container clearfix">
+  <section id="intro-description">
+    <img src="" alt=""id="intro-icon">
+    <h1 id="name">Don</h1>
+    <p>I love Front-end</p>
+  </section>
+  <section class="row intro-container">
+    <div class="col-xs-4 intro-div" id="social">
+      <h3>Social Links</h3>
+      <ul>
+        <li><a href="http://weibo.com/dongdongwontonnoodle/">Weibo</a></li>
+        <li><a href="http://www.zhihu.com/people/cai-dong-018">Zhihu</a></li>
+        <li><a href="http://www.github.com/dontry/">Github</a></li>
+        <li><a href="http://codepen.io/dontry018">Codepen</a></li>
+      </ul>
+    </div>
+    <div class="col-xs-4 intro-div" id="education">
+      <h3>Education</h3>
+      <ul>
+        <li>South China University of Technology</li>
+        <li>South China Agriculture University</li>
+        <li>Guangzhou No.2 Middle School</li>
+      </ul>
+    </div>
+    <div class="col-xs-4 intro-div" id="project">
+      <h3>Projects</h3>
+      <ul>
+        <li><a href="https://dontry.github.io">My Personal Blog</a><span> - A personal blog based on Github Pages</span></li>
+        <li>
+          <a href="https://github.com/dontry/ImageDIY">Image DIY</a><span> - Android image editor application</span></li>
+        <li>
+          <a href="https://github.com/dontry/donlock">Donlock </a><span> - Android cartoon screenlock</span></li>
+      </ul>
+    </div>
+  </section>
+</div>
+	<script type="text/javascript"  src="http://localhost:8080/public/helloWorld.js"></script>
 </body>
 </html>
