modify directory of css & js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="http://localhost:8080/public/style.css">
+	<link rel="stylesheet" href="public/style.css">
 	<!-- <link rel="stylesheet" href="http://localhost:8080/public/_boostrap.css"> -->
 </head>
 <body class="hello-form">
@@ -43,6 +43,6 @@
     </div>
   </section>
 </div>
-	<script type="text/javascript"  src="http://localhost:8080/public/helloWorld.js"></script>
+	<script type="text/javascript"  src="public/helloWorld.js"></script>
 </body>
 </html>
