下拉列表完善

--- a/103-signup-pages/taobao_register.html
+++ b/103-signup-pages/taobao_register.html
@@ -45,9 +45,9 @@
 		<div id="nextStep" class="row"><p>下一步</p></div>
 		<p id="emailReg" class="row"><a href="">需要通过邮箱注册</a></p>
 		<div id="selector">
-			<select size="7" multiple="multiple">
-					<option value="国家1    +855">国家1   +855</option>
-					<option value="国家2    +855">国家2   +855</option>
+			<select size="7">
+					<option value="国家1    +855" selected>中国大陆   +855</option>
+					<option value="国家2    +855" >国家2   +855</option>
 					<option value="国家3    +855">国家3   +855</option>
 					<option value="国家4    +855">国家4   +855</option>
 					<option value="国家5    +855">国家5   +855</option>
