--- a/103-signup-pages/signup-pages/index.html
+++ b/103-signup-pages/signup-pages/index.html
@@ -59,7 +59,7 @@
                 <div class="slide-main">
                   <div class="slide-show"></div>
                   <div class="slide-box">>></div>
-                  <span id="boxhint">请按住滑块，拖动到最右边</span>
+                  <span id="boxhint" class="boxhint">请按住滑块，拖动到最右边</span>
                   <div class="slide-area">
                     &nbsp
                   </div>
@@ -74,7 +74,7 @@
               </div>
 
               <div class="form-submit">
-                <button type="button" name="button" id="submit">
+                <button type="button" name="button" id="submit" class="submit">
                   下一步
                 </button>
                 <span id="regMethod">需要通过邮箱注册</span>
@@ -85,6 +85,7 @@
       </div>
     </div>
     <script src="./dist/js/jquery.min.js"></script>
+    <script src="./dist/js/lodash.js"></script>
     <script src="./dist/js/main.min.js"></script>
   </body>
 </html>
