103 project production version

--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>taobao signup</title>
-    <link rel="stylesheet" href="http://localhost:8080/dist/reset.css">
-    <link rel="stylesheet" href="http://localhost:8080/dist/style.min.css">
+    <link rel="stylesheet" href="dist/reset.css">
+    <link rel="stylesheet" href="dist/style.min.css">
     <script src="dist/jquery.min.js"></script>
 
 </head>
@@ -166,7 +166,7 @@
             </p>
         </div>
     </footer>
-	<script src="http://localhost:8080/js/main.js"></script>
+	<script src="dist/main.min.js"></script>
 </body>
 
 </html>
