use === rather than ==

--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -67,7 +67,7 @@
 			},
 			handleKeyDown: function(e) {
 				var ENTER = 13;
-				if(e.keyCode == ENTER) {
+				if(e.keyCode === ENTER) {
 					this.setState({value: this.refs.input_field.value});
 				}
 			},
