--- a/101-clickable-grid/js-project101.html
+++ b/101-clickable-grid/js-project101.html
@@ -8,14 +8,9 @@
 				margin-right: auto;
 				margin-left: auto;
 			}
-			#hint {
-				width: 500px;
-				height: 40px;
-				display: inline;
-			}
-			#input {
-				width: 20px;
-				height: 20px;
+			#num {
+				width: 30px;
+				height: 30px;
 			}
 			#top {
 				margin-right: auto;
@@ -44,8 +39,10 @@
 	</head>
 	<body>
 		<div>
-			<div id="hint">请输入一个数字</div>
-			<input type="text" id="input">
+			<h3>请输入一个数字</h3>
+			<input type="text" id="num">
+			<p>输入一个数字n（1--14），会生成n * n个小方格，一次显示1到n的平方。点击小方格，console里会打印对应数字</p>
+			<p>console打印：<span id="consoleValue"></span></p>
 			<hr />
 			<div id="top"></div>
 		</div>
@@ -53,40 +50,37 @@
 
 		window.onload = function() {
 			var top = document.getElementById("top");
-			var getInput = document.getElementById('input');
+			var getInput = document.getElementById('num');
 			getInput.addEventListener('change', function(){
 				var inputValue = getInput.value;
-				if(isNaN(inputValue)){
-					alert("输入非法")
-						return;
-				}
-				if(inputValue > 14 || inputValue < 1){
-					alert("不在范围内")
-					return;
-				}
-				while(top.children.length){
-					top.removeChild(top.children[0]);
-				}
-				//定义文档碎片，先创建一个row的div，再在其中插入n个内部展示的div
-				var docFragment = document.createDocumentFragment();
-				for(var i=0; i<inputValue; ++i){
-					var rowDiv = document.createElement("div");
-					rowDiv.className = "row";
-					for(var j=0 ;j<inputValue; ++j){
-						var innerDiv = document.createElement("div");
-						innerDiv.className = "inner";
-						innerDiv.innerHTML = (inputValue * i + j + 1);
-						rowDiv.appendChild(innerDiv);
+				if(inputValue >0 && inputValue < 15){
+					while(top.children.length){
+						top.removeChild(top.children[0]);
 					}
-					docFragment.appendChild(rowDiv);
-				}
+					//定义文档碎片，先创建一个row的div，再在其中插入n个内部展示的div
+					var docFragment = document.createDocumentFragment();
+					for(var i=0; i<inputValue; ++i){
+						var rowDiv = document.createElement("div");
+						rowDiv.className = "row";
+						for(var j=0 ;j<inputValue; ++j){
+							var innerDiv = document.createElement("div");
+							innerDiv.className = "inner";
+							innerDiv.innerHTML = (inputValue * i + j + 1);
+							rowDiv.appendChild(innerDiv);
+						}
+						docFragment.appendChild(rowDiv);
+					}
 				//将文档碎片插入top div。
 				top.appendChild(docFragment);
+			}else {
+				alert("输入错误，重新输入！")
+			}
 			});
 			//在top的div上定义监听事件
 			top.addEventListener('click', function(e){
-				if(e.target && e.target.nodeName.toLowerCase() == "div"){
+				if(e.target && e.target.nodeName.toLowerCase() === "div" && e.target.children.length === 0){
 					console.log(e.target.innerHTML);
+					document.getElementById("consoleValue").innerText = e.target.innerHTML;
 				}
 			})
 		}
