finish basic features

--- a/101-clickable-grid/grid.html
+++ b/101-clickable-grid/grid.html
@@ -7,18 +7,20 @@
 </head>
 
 <body>
-  <form role="form">
-    <div class="col-sm-7">
-      <div class="input-group-sm">
-        <input type="text" class="form-control" id="integer" placeholder="select an integer between 1 to 20">
+  <div id="box">
+    <form role="form">
+      <div class="col-sm-7">
+        <div class="input-group-md">
+          <input type="text" class="form-control" id="integer" placeholder="select an integer between 1 to 20">
+        </div>
       </div>
-    </div>
-    <div class="col-sm-5">
-      <button type="button" id="generate" class="btn btn-sm btn-success">Generate</button>
-      <button type="reset" id="clear" class="btn btn-sm btn-danger">Clear</button>
-    </div>
-  </form>
-  <canvas id="main">Please upgrade your browser!</canvas>
+      <div class="col-sm-5">
+        <button type="button" id="generate" class="btn btn-md">Generate</button>
+        <button type="reset" id="clear" class="btn btn-md">Clear</button>
+      </div>
+    </form>
+    <canvas id="main" width="600" height="600">Please upgrade your browser!</canvas>
+  </div>
   <script src="grid.js"></script>
 
 </body>
