--- a/102-github-pages/index.html
+++ b/102-github-pages/index.html
@@ -1,22 +1,84 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>PersonalPage</title>
-  <meta name="description" content="PersonalPage">
-  <meta name="author" content="PersonalPage">
-
-  <link rel="stylesheet" href="bundle-css.css">
-
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+	<meta charset="UTF-8">
+	<title>glen</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="bundle-css.css">
 </head>
-
 <body>
-  <div class="container"><div>
-  <script src="bundle-js.js"></script>
+	<div class="wrap">
+		<header>
+			<div class="avatar-wrap">
+				<img src="" id="avatar">
+				<p>glen</p>
+			</div>
+		</header>
+
+		<div class="main container">
+			<div class="intro-nagging">
+				<ul>
+					<li>想做就做做嘛</li>
+					<li>说不定能坚持下去呢</li>
+					<li>至少也要证明自己不可以啊</li>
+				</ul>
+			</div>
+
+			<div class="row intro-info">
+				<div class=" col-md-4">
+					<p>Education</p>
+					<ul>
+						<li>柘荣城关小学</li>
+						<li>柘荣第三中学</li>
+						<li>柘荣第一中学</li>
+						<li>闽江学院</li>
+					</ul>
+				</div>
+				<div class=" col-md-4">
+					<p>Projects</p>
+					<ul>
+						<li>IFE</li>
+						<li>QianXueSeng</li>
+						<li>Remain doing</li>
+					</ul>
+				</div>
+				<div class=" col-md-4">
+					<p>Contact</p>
+					<ul>
+						<li><a href="https://github.com/glenye">Github</a></li>	
+						<li><a href="https://zhihu.com/people/gleny">Zhihu</a></li>
+						<li><a href="https://glenye.github.io">Blog</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row intro-info">
+				<div class=" col-md-4">
+					<p>Key skills</p>
+					<ul>
+						<li>HTML</li>
+						<li>CSS</li>
+						<li>JavaScript</li>
+						<li>jQuery</li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<p>Other skills</p>
+					<ul>
+						<li>node.js</li>
+						<li>webpack</li>
+						<li>bootstrap</li>
+						<li>sass</li>
+						<li>PS</li>
+					</ul>
+				</div>
+
+				<div class="col-md-4">
+					<p>Profile</p>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="bundle-js.js"></script>
 </body>
 </html>
