--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -24,15 +24,28 @@
 		</div>
 		<div id="login">
 			<div id="phone">
-				<span>手机号码</span>
+				<span>手机号码&nbsp&nbsp</span>
 				<select>
 					<option>中国&nbsp&nbsp&nbsp+86</option>
 					<option>美国&nbsp&nbsp&nbsp+1</option>
 					<option>台湾&nbsp&nbsp&nbsp+886</option>
 					<option>香港&nbsp&nbsp&nbsp+852</option>
 				</select>
+				<input id="phoneNumber" />
+				<p id="phoneWrong">*手机号码格式错误</p>
 			</div>
+			<div id="verify">
+				<span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp验证</span>
+				<div id="verifyDiv">
+					<div id="showleft"></div>
+					<div id="showbox">>></div>
+					<span>请拖动滑块</span>
+				</div>
+			</div>
+			<div id="nextStep"><button>下一步</button></div>
 		</div>
 	</div>
+	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
