--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -7,46 +7,45 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<div>
-		<div id="logo">
-			<h2>
-			<a href="http://www.taobao.com"><img src="img/logo.jpg"></a>
-			用户注册</h2>
+	<div class="page">
+		<div class="header">
+			<div class="logo">
+				<div><img src="img/logo.jpg" height="60" width="100"></div>
+				<div><h1>用户注册</h1></div>	
+    		</div>
 		</div>
-		<div id="step">
+		<div class="steps">
 			<ol>
-				<li>设置用户名</li>
-				<li>填写账号信息</li>
-				<li>设置支付方式</li>
-				<li>注册成功</li>
+		        <li class="active"><i>1</i><span>设置用户名</span></li>
+				<li><i>2</i><span>填写账号信息</span></li>
+		 		<li><i>3</i><span>设置支付方式</span></li>		
+		 		<li><i>4</i><span>注册成功</span></li>
 			</ol>
-			<hr/>
 		</div>
-		<div id="login">
-			<div id="phone">
-				<span class="form-title">手机号码</span>
-				<select>
-					<option>中国&nbsp&nbsp&nbsp+86</option>
-					<option>美国&nbsp&nbsp&nbsp+1</option>
-					<option>台湾&nbsp&nbsp&nbsp+886</option>
-					<option>香港&nbsp&nbsp&nbsp+852</option>
-				</select>
-				<input id="phoneNumber" />
-				<p id="phoneWrong">*手机号码格式错误</p>
-			</div>
-			<div id="verify">
-				<span class="form-title">验证</span>
-				<div id="verifyDiv">
-					<div id="showleft"></div>
-					<div id="showbox"><span>>></span></div>
-					<span id="verifyHint">请拖动滑块</span>
+		<div class="content">
+			<div class="form_group">
+				<div class="form_item" id="phone">
+					<span class="itemLabel">手机</span>
+					<div class="phone_text">
+						<select>
+							<option value="中国">中国+86</option>
+							<option value="台湾">台湾+343</option>
+							<option value="美国">美国+1</option>
+							<option value="日本">日本+34</option>
+						</select>
+						<input type="text" placeHolder="请输入手机号码" id="mobile" />
+						<span class="tip" id='mobileWrong'>手机号码格式错误！</span>
+					</div>
 				</div>
-				<div id="showImg">
-					<div><img id="freshImg" src="img/fresh.png"></div>
-					<div><img id="verifyImg" src="img/1.jpg"></div>
+				<div class="form_item" id="verify">
+					<span class="itemLabel">验证</span>
+					<div class="verify">
+						
+					</div>			
 				</div>
 			</div>
-			<div id="nextStep"><button>下一步</button></div>
+			<div class="next">
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
