--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -40,7 +40,11 @@
 				<div class="form_item" id="verify">
 					<span class="itemLabel">验证</span>
 					<div class="verify">
-						
+						<div id="slide_bg"></div>
+						<span id="slide_box"></span>
+						<div id="text_content">
+							<span id="slide_tip">请按住滑块，拖到最右边</span>
+						</div>
 					</div>			
 				</div>
 			</div>
