增加了滑块

--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -41,7 +41,7 @@
 					<span class="itemLabel">验证</span>
 					<div class="verify">
 						<div id="slide_bg"></div>
-						<span id="slide_box"></span>
+						<span id="slide_box">>></span>
 						<div id="text_content">
 							<span id="slide_tip">请按住滑块，拖到最右边</span>
 						</div>
