--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -45,6 +45,15 @@
 						<div id="text_content">
 							<span id="slide_tip">请按住滑块，拖到最右边</span>
 						</div>
+					</div>
+					<div class="showImg">
+						<span class="imgText">
+							<a href="#" class="captcha-reload">看不清？换一张</a>
+						</span>
+						<div class="imgArea">
+							<img id="img" src="">
+						</div>
+						<span class="imgAnswer"></span>
 					</div>			
 				</div>
 			</div>
