--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 	<div class="form">
-		<input id='text' type="text" placeholder='请输入数值: 1~20'><input id='btn' type="button" value='开始生成'>
+		<input id='text' type="text" placeholder='请输入数值: 1~20' >
+		<input id='btn' type="button" value='开始生成' >
 	</div>
 	<div id="message">
 		
