可以实现点击切换图片

--- a/103-signup-pages/index.html
+++ b/103-signup-pages/index.html
@@ -61,11 +61,13 @@
                 </div>
             </div>
             <div class="next">
+                <button>下一步</buttom>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="script/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
+    <!-- <script type="text/javascript" src="script/script.js"></script> -->
 </body>
 
 </html>
